--- a/public/css/paciente.css
+++ b/public/css/paciente.css
@@ -9,9 +9,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+}
 
-header{
+header {
     width: 80vw;
     display: flex;
     flex-direction: row;
@@ -19,12 +19,86 @@ header{
     align-items: center;
 }
 
-.ulHeader{
+.ulHeader {
     display: flex;
     flex-direction: row;
     gap: 50px;
 }
 
-li{
+li {
     list-style-type: none;
+}
+
+.icon {
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+}
+
+.nombre {
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.sectionPrincipal{
+    width: 80vw;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px rgb(129, 129, 129);
+    border-radius: 50px;
+}
+
+.sectionPerfil {
+    width: 70vw;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.article1 {
+    background-color: #D4F6FF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px rgb(129, 129, 129);
+    border-radius: 50px;
+}
+
+.divisor {
+    width: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 0;
+}
+
+.botonEditar {
+    height: 45px;
+    width: 100px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botonEditar:hover {
+    background-color: #0056b3;
+}
+
+.aEditar{
+    color: white !important;
+}
+
+.aEditar:hover{
+    color: white !important;
 }
