--- a/views/paciente/pacientePerfil.pug
+++ b/views/paciente/pacientePerfil.pug
@@ -6,71 +6,31 @@ html
     link(rel="stylesheet" href="/css/footer.css")
   body
     include ../includes/headerPaciente
-    h1 Datos Personales
-    section
-      article
-        form.formPerfil(action="/pacientes/perfil", method="POST")
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilNombre") Nombre completo:
-            input.inputPerfil(
-              type="text", 
-              id="perfilNombre", 
-              name="nombre",
-              placeholder=paciente[0].nombre_completo,
-              value=paciente[0].nombre_completo,
-              disabled
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilEmail") Correo electrónico:
-            input.inputPerfil(
-              type="email", 
-              id="perfilEmail", 
-              name="email", 
-              required, 
-              placeholder=paciente[0].email,
-              disabled
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilDni") DNI:
-            input.inputPerfil(
-              type="text", 
-              id="perfilDni", 
-              name="dni", 
-              placeholder=paciente[0].dni,
-              disabled
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilMutual") Mutual:
-            input.inputPerfil(
-              type="text", 
-              id="perfilMutual", 
-              name="mutual", 
-              placeholder=paciente[0].obra_social
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilDireccion") Dirección:
-            input.inputPerfil(
-              type="text", 
-              id="perfilDireccion", 
-              name="direccion", 
-              placeholder=paciente[0].direccion
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilTelefono") Teléfono:
-            input.inputPerfil(
-              type="text", 
-              id="perfilTelefono", 
-              name="telefono", 
-              placeholder=paciente[0].telefono
-            )
-          fieldset.campoPerfil
-            label.lbPerfil(for="perfilFechaNacimiento") Fecha de nacimiento:
-            input.inputPerfil(
-              type="date", 
-              id="perfilFechaNacimiento", 
-              name="fecha_nacimiento",
-              value=paciente[0].fecha_nacimiento
-            )
-          button.botonPerfil(type="submit") Editar
+    h1.h1Perfil Datos Personales
+    section.sectionPrincipal
+      img(src=`/img/icon/${paciente[0].icon}.jpg`, alt="icon" class="icon" id="icon")
+      span.nombre=paciente[0].nombre_completo
+      section.sectionPerfil
+        article.article1
+          fieldset.divisor
+            label.lbPerfil: u Correo electrónico:
+            span.spanPerfil=paciente[0].email
+          fieldset.divisor
+            label.lbPerfil: u DNI:
+            span.spanPerfil=paciente[0].dni
+          fieldset.divisor
+            label.lbPerfil: u Mutual:
+            span.spanPerfil=paciente[0].obra_social
+        article.article1
+          fieldset.divisor
+            label.lbPerfil: u Dirección:
+            span.spanPerfil=paciente[0].direccion
+          fieldset.divisor
+            label.lbPerfil: u Teléfono:
+            span.spanPerfil=paciente[0].telefono
+          fieldset.divisor
+            label.lbPerfil: u Fecha de nacimiento:
+            span.spanPerfil=formattedDate
+      li.botonEditar: a.aEditar(href="/pacientes/editar") Editar datos
     include ../includes/footer
     script(src="/js/logout.js")
