--- a/public/css/paciente.css
+++ b/public/css/paciente.css
@@ -29,9 +29,21 @@ li {
     list-style-type: none;
 }
 
+.campoImg{
+    display: flex;
+    justify-content: center;
+    
+}
+
 .icon {
     width: 150px;
     height: 150px;
+    border-radius: 15px;
+}
+
+.iconEdit {
+    width: 50px;
+    height: 50px;
     border-radius: 15px;
 }
 
