--- a/views/paciente/pacienteEditarFotoSuccess.pug
+++ b/views/paciente/pacienteEditarFotoSuccess.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet" href="/css/footer.css")
     body
         include ../includes/headerPaciente
-        h1 ¡Elige tu foto de perfil!
+        h1 ¡Tu foto de perfil ha sido cambiada exitosamente!
         section
             form.formPerfilFoto(action="/pacientes/foto" method="POST")
                 each num in Array.from({ length: 16 }, (_, i) => i + 1)
