cambio en rutas de vistas

--- a/views/admin/adminPanel.pug
+++ b/views/admin/adminPanel.pug
@@ -5,8 +5,8 @@ html
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main 
             h1 Administrador 
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
