--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/css/login.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         section.seccion
             article.articuloRegistro
                 form.formRegistro(action="/auth/registerSecretaria", method="POST")
@@ -20,5 +20,5 @@ html
                         label.lbPwRegistro(for="registerPassword") Contraseña:
                         input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
                     button.botonRegistro(type="submit") Registrar secretaria
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
