--- a/views/admin/adminSecretariaSuccess.pug
+++ b/views/admin/adminSecretariaSuccess.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/css/login.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         section.seccionSecre
             h1 ¡Secretaria creada con éxito!
             article.articuloRegistro
@@ -21,5 +21,5 @@ html
                         label.lbPwRegistro(for="registerPassword") Contraseña:
                         input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
                     button.botonRegistro(type="submit") Registrar secretaria
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
