--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -4,7 +4,7 @@ html
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretaria.css")
   body
-    include includes/headerSecretaria
+    include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
     h2 Lista de Turnos
     section.sectionMain
@@ -27,5 +27,5 @@ html
                 td= turno.detalle_turno
             else
               p No hay turnos disponibles
-    include includes/footer
+    include ../includes/footer
     script(src="/js/logout.js")
