--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -5,12 +5,12 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footer.css")
   body
-    include includes/headerSecretaria
+    include ../includes/headerSecretaria
     h1 ¡Turno creado exitosamente!
     a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer") Volver al inicio
       
 
-    include includes/footer
+    include ../includes/footer
 
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
