--- a/views/admin/adminCargarProfesional.pug
+++ b/views/admin/adminCargarProfesional.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main 
             h1 Cargar Médicos
             section(class="sectionCrud")
@@ -22,5 +22,5 @@ html
                 article(class="articleCrud")
                     a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
                     span Activar / Inactivar un médico
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
