--- a/views/admin/adminCreateProfesional.pug
+++ b/views/admin/adminCreateProfesional.pug
@@ -7,7 +7,7 @@ html
         link(rel="stylesheet", href="/css/adminFormCargar.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main
             form.formCreate(action="/profesional/crear", method="POST")
                 span.spanCreate Cargar un médico
@@ -26,5 +26,5 @@ html
                         option(value="psicologia") Psicología
                         option(value="odontologia") Odontología
                 button.botonCreate(type="submit") Cargar médico
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
