--- a/views/admin/adminCreateSuccess.pug
+++ b/views/admin/adminCreateSuccess.pug
@@ -7,8 +7,8 @@ html
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main
             h1 ¡Médico cargado exitosamente!
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
