--- a/views/admin/adminDeleteProfesional.pug
+++ b/views/admin/adminDeleteProfesional.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main 
             p Buscar la ID o Matrícula en este 
                 a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
@@ -14,5 +14,5 @@ html
             form(action="/admin/cambiarEstado" method="POST")
                 input(type="text" name="id" placeholder="ID del médico" required)
                 button(type="submit") Cambiar de estado
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
