--- a/views/admin/adminDeleteSuccess.pug
+++ b/views/admin/adminDeleteSuccess.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main 
             h1 ¡¡¡Se cambió el estado exitosamente!!!
             p Buscar la ID o Matrícula en este 
@@ -15,5 +15,5 @@ html
             form(action="/admin/cambiarEstado" method="POST")
                 input(type="text" name="id" placeholder="ID del médico" required)
                 button(type="submit") Cambiar de estado
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
