--- a/views/admin/adminUpdateEspecialidadSuccess.pug
+++ b/views/admin/adminUpdateEspecialidadSuccess.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet" href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main
             h1 ¡¡¡Se actualizo la especialidad exitosamente!!!
             p Buscar la ID o Matrícula en este 
@@ -31,5 +31,5 @@ html
                 input(type="text" name="profesional_id" placeholder="ID del médico" required)
                 input(type="text" name="nuevo_nombre_completo" placeholder="Nuevo nombre completo" required)
                 button(type="submit") Actualizar
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
