--- a/views/admin/adminUpdateProfesional.pug
+++ b/views/admin/adminUpdateProfesional.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet" href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerAdmin
+        include ../includes/headerAdmin
         main
             p Buscar la ID o Matrícula en este 
                 a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
@@ -30,5 +30,5 @@ html
                 input(type="text" name="profesional_id" placeholder="ID del médico" required)
                 input(type="text" name="nuevo_nombre_completo" placeholder="Nuevo nombre completo" required)
                 button(type="submit") Actualizar
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
