--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footer.css")
   body
-    include includes/headerSecretaria
+    include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
     form(action="/turnos/crear" method="POST" class="formTurnos") 
       h3 Selecciona un Profesional
@@ -33,6 +33,6 @@ html
       textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
       input(type="hidden" name="estado" value="Confirmado")
       button(type="submit") Crear Turno
-    include includes/footer
+    include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
