--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -10,7 +10,7 @@ html
     form(action="/turnos/crear" method="POST" class="formTurnos") 
       h3 Selecciona un Profesional
       if profesionales && profesionales.length
-        select(name="profesional_especialidad_id" required)
+        select(name="profesional_especialidad_id" id="profesional" required)
           option(value="" selected disabled)
             each profesional in profesionales
               option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
