--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -4,6 +4,7 @@ html
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
@@ -11,7 +12,7 @@ html
       h3 Selecciona un Profesional
       if profesionales && profesionales.length
         select(name="profesional_especialidad_id" id="profesional" required)
-          option(value="" selected disabled)
+          option(value="" selected disabled) Selecciona un profesional
             each profesional in profesionales
               option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
       else
@@ -25,7 +26,7 @@ html
       else
         p no se encontraron pacientes
       label(for="fecha") Selecciona la fecha:
-      input(type="date" name="fecha" id="fecha" required)
+      input(type="text" name="fecha" id="fecha" required)
       label(for="horario") Selecciona un horario:
       select(name="hora" id="horario" required)
         option(value="" selected disabled) Selecciona un horario
@@ -36,3 +37,4 @@ html
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
+    script(src="https://cdn.jsdelivr.net/npm/flatpickr")
