--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Crear Agenda
+    link(rel="stylesheet" href="/css/secretariaCrearAgenda.css")
   body
     include ../includes/headerSecretaria
 
