--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -1,4 +1,5 @@
 header
+      link(rel="stylesheet" href="/css/headerSecretaria.css")
       a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
