--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -4,6 +4,8 @@ html
     title Crear Agenda
     link(rel="stylesheet" href="/css/secretariaCrearAgenda.css")
     link(rel="stylesheet" href="/css/secretaria.css")
+    link(rel="stylesheet" href="/css/headerSecretaria.css")
+    link(rel="stylesheet" href="/css/footer.css")
   body
     include ../includes/headerSecretaria
 
