--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title Secretaria Panel
-    link(rel="stylesheet" href="/css/secretaria.css")
+    link(rel="stylesheet" href="/css/secretariaPanel.css")
+    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/headerSecretaria.css")
   body
     include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
