--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -4,6 +4,7 @@ html
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/headerSecretaria.css")
   body
     include ../includes/headerSecretaria
     h1 ¡Turno creado exitosamente!
