--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,18 +1,29 @@
-.footer{
-    border-top: 1px solid rgb(129, 129, 129);
-    width: 60vw; 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 5px;
-    margin-bottom: 10px;
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+
+
+.footer {
+  border-top: 1px solid rgb(129, 129, 129);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0;
+  background-color: #f1f1f1;
+  margin-top: auto; 
 }
 
 .sectionFooter{
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
