--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -8,26 +8,7 @@ html
   body
     include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
-    h2 Lista de Turnos
-    section.sectionMain
-      if turnos && turnos.length
-        table.tableTurnos
-          thead
-            tr
-              th Turno para
-              th Médico
-              th Fecha
-              th Hora
-              th Observación
-          tbody
-            each turno in turnos
-              tr
-                td= turno.paciente_nombre
-                td= turno.profesional_especialidad
-                td= turno.fecha
-                td= turno.hora
-                td= turno.detalle_turno
-            else
-              p No hay turnos disponibles
+    h2 Lista de turnos
+   
     include ../includes/footer
     script(src="/js/logout.js")
