--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -26,22 +26,29 @@ html
               th Turno para
               th Médico
               th Especialidad
+              th Sucursal
               th Fecha
               th Hora
               th Observación
+              th
+              th 
           tbody
             each turno in turnos
               tr
                 td= turno.paciente_nombre
                 td= turno.nombre_medico
                 td= turno.especialidad 
+                td= turno.sucursal
                 td= turno.fecha
                 td= turno.hora
                 td= turno.detalle_turno
+                td
+                  a(class="btn-editar") Editar
+                td
+                  a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
             else
               p No hay turnos disponibles
     include ../includes/footer
-    script(src="/js/logout.js")
     script(src="/js/logout.js")
     script(src="/js/tablafecha.js")
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
