--- a/views/secretaria/secretariaDetalleTurno.pug
+++ b/views/secretaria/secretariaDetalleTurno.pug
@@ -2,8 +2,11 @@ doctype html
 html
     head
         title Detalles del Turno
-        link(rel="stylesheet" href="/css/secretariaDetalleTurnos")
+        link(rel="stylesheet" href="/css/secretariaDetalleTurnos.css")
+        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/headerSecretaria.css")
     body
+        include ../includes/headerSecretaria
         h1 Detalles del Turno
         ul
             li  Paciente: #{turno.paciente_nombre}
@@ -17,4 +20,5 @@ html
             li  Hora: #{turno.hora}
             li  Observaciones: #{turno.detalle_turno}
         a(href="/turnos/listarTurnos") ← Volver a turnos
+        include ../includes/footer
         script(src="/js/logout.js")
