--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -18,7 +18,7 @@ main {
   justify-content: center;
   align-items: center;
   padding: 15px 0;
-  background-color: #f1f1f1;
+  background-color: #fbfbfb;
   margin-top: auto; 
 }
 
