cambios en agenda

--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -6,27 +6,28 @@ html
     link(rel="stylesheet" href="/css/secretaria.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
 
     h1 Crear Agenda para Profesional
 
     form(action="/agendas/crear" method="POST" class="form-agenda")
-      //- Selección del profesional
+      
       label(for="profesional") Seleccionar Profesional:
       select(name="profesional_especialidad_id" id="profesional" required)
         option(value="" disabled selected) Selecciona un profesional
         each profesional in profesionales
           option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
 
-      //- Selección de la sucursal
+      
       label(for="sucursal") Seleccionar Sucursal:
       select(name="sucursal_id" id="sucursal" required)
         option(value="" disabled selected) Selecciona una sucursal
         each sucursal in sucursales
           option(value=sucursal.id)= sucursal.nombre
 
-      //- Fechas de inicio y fin de la agenda
+      
       label(for="dia_inicio") Fecha de inicio:
       input(type="date" name="dia_inicio" required)
 
@@ -34,11 +35,11 @@ html
       input(type="date" name="dia_fin" required)
 
       label(for="tiempo_consulta") Duración de cada consulta:
-      input(type="time" name="tiempo_consulta" value="00:30:00" required)
+      input(type="time" id="tiempo_consulta" name="tiempo_consulta" value="00:30:00" required)
 
       h2 Días de atención
 
-      //- Tabla para los días de la semana
+      
       table
         thead
           tr
@@ -66,3 +67,5 @@ html
       button(type="submit") Crear Agenda
     include ../includes/footer
     script(src="/js/logout.js")
+    script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+    script(src="/js/crearAgendas.js")
