--- a/views/secretaria/secretariaDetalleTurno.pug
+++ b/views/secretaria/secretariaDetalleTurno.pug
@@ -8,7 +8,7 @@ html
     body
         include ../includes/headerSecretaria
         h1 Detalles del Turno
-        ul
+        ul.detalle-turno
             li  Paciente: #{turno.paciente_nombre}
             li  DNI: #{turno.dni}
             li  Obra social: #{turno.obra_social}
@@ -16,8 +16,8 @@ html
             li  Profesional: #{turno.nombre_medico}
             li  Especialidad: #{turno.especialidad}
             li  Sucursal: #{turno.sucursal}
-            li  Fecha: #{turno.fecha}
-            li  Hora: #{turno.hora}
+            li  Fecha: #{turno.fechaFormateada}
+            li  Hora: #{turno.horaFormateada}
             li  Observaciones: #{turno.detalle_turno}
         a(href="/turnos/listarTurnos") ← Volver a turnos
         include ../includes/footer
