implementacion de la lista de espera

--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -4,6 +4,8 @@ header
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
+          li: a(href="/secretaria/crearListaEspera") Crear espera
+          li: a(href="/secretaria/listarEspera") Lista de espera
           li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="/agendas/crear") Crear Agenda
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
