--- a/views/secretaria/secretariaDetalleTurno.pug
+++ b/views/secretaria/secretariaDetalleTurno.pug
@@ -19,6 +19,13 @@ html
             li  Fecha: #{turno.fechaFormateada}
             li  Hora: #{turno.horaFormateada}
             li  Observaciones: #{turno.detalle_turno}
+            li Estado: #{turno.estado}
+            if turno.dni_foto_url
+                li DNI Foto:
+                    a(href=turno.dni_foto_url target="_blank")
+                        img(src=turno.dni_foto_url alt="DNI Foto" class="dni-foto" width="400" height="200")
+            else
+                li Foto del DNI no disponible
         a(href="/turnos/listarTurnos") ← Volver a turnos
         include ../includes/footer
         script(src="/js/logout.js")
