--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -30,8 +30,10 @@ html
               th Fecha
               th Hora
               th Observación
-              th
-              th 
+              th DNI
+              th Estado
+              th Acciones
+              th Acciones
           tbody
             each turno in turnos
               tr
@@ -42,6 +44,13 @@ html
                 td= turno.fecha
                 td= turno.hora
                 td= turno.detalle_turno
+                td
+                  if turno.dni_foto_url
+                    a(href=turno.dni_foto_url target="_blank")
+                      img(src=turno.dni_foto_url alt="DNI Foto" class="dni-foto" width="70" height="50")
+                  else
+                    p Foto no disponible
+                td= turno.estado
                 td
                   a(class="btn-editar") Editar
                 td
