--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -34,6 +34,8 @@ html
       label(for="detalle_turno") Detalle del turno:
       textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
       input(type="hidden" name="estado" value="Confirmado")
+      label(for="dni_foto") Subí la fotocopia del DNI:
+      input(type="file" name="dni_foto" id="dni_foto" accept="image/*" required)
       button(type="submit") Crear Turno
     include ../includes/footer
     script(src="/js/logout.js")
