Cambio de estado a "Reservada"
había puesto "Reservado" pero la consigna dice "Reservada" asique mejor volver a como estaba, que es como dice la consigna.

--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -26,7 +26,7 @@ html
         option(value="" selected disabled) Selecciona un horario
       label(for="detalle_turno") Detalle del turno:
       textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
-      input(type="hidden" name="estado" value="Reservado")
+      input(type="hidden" name="estado" value="Reservada")
       label(for="dni_foto") Subí tu fotocopia del DNI:
       input(type="file" name="dni_foto" id="dni_foto" accept="image/*" required)
       button(type="submit") Crear Turno
