css y cambios minimos

--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -2,7 +2,9 @@ doctype html
 html
     head
         title Registrar Ausencia
-        link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
+        link(rel="stylesheet" href="/css/secretariaCrearAusencia.css")
+        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/headerSecretaria.css")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
     body
         include ../includes/headerSecretaria
@@ -47,5 +49,7 @@ html
                 textarea(name="descripcion")
 
             button(type="submit") Registrar Ausencia
-        script(src="/js/ausencias.js", defer)
+        script(src="/js/ausencias.js")
         script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+        script(src="/js/logout.js")
+        include ../includes/footer
