--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -6,6 +6,7 @@ html
         link(rel="stylesheet" href="/css/footer.css")
         link(rel="stylesheet" href="/css/headerSecretaria.css")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
+        link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
     body
         include ../includes/headerSecretaria
 
@@ -49,7 +50,35 @@ html
                 textarea(name="descripcion")
 
             button(type="submit") Registrar Ausencia
-        script(src="/js/ausencias.js")
-        script(src="https://cdn.jsdelivr.net/npm/flatpickr")
-        script(src="/js/logout.js")
-        include ../includes/footer
+
+    h3 Ausencias cargadas:
+    table#tablaAusencias
+        thead
+            tr
+                th Profesional
+                th Especialidad
+                th Desde
+                th Hasta
+                th Horario
+                th Tipo
+        tbody
+            each a in ausencias
+                tr
+                    td #{a.nombre_completo}
+                    td #{a.especialidad}
+                    td #{new Date(a.fecha_inicio).toLocaleDateString('es-AR')}
+                    td #{new Date(a.fecha_fin).toLocaleDateString('es-AR')}
+                    td 
+                        if !a.hora_inicio && !a.hora_fin
+                            | Todo el día
+                        else
+                            | #{a.hora_inicio} - #{a.hora_fin}
+                    td #{a.tipo}
+
+script(src="/js/ausencias.js")
+script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+script(src="https://code.jquery.com/jquery-3.7.1.min.js")
+script(src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js")
+script(src="/js/tablafecha.js")
+script(src="/js/logout.js")
+include ../includes/footer
