borrado de ausencias y correccion de errores

--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -9,7 +9,7 @@ html
   body
     include ../includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
-    form(action="/turnos/crear" method="POST" class="formTurnos") 
+    form(action="/turnos/crear" method="POST" class="formTurnos" enctype="multipart/form-data") 
       h3 Selecciona un Profesional
       if profesionales && profesionales.length
         select(name="profesional_especialidad_id" id="profesional" required)
