--- a/public/css/secretariaCrearAusencia.css
+++ b/public/css/secretariaCrearAusencia.css
@@ -163,3 +163,17 @@ h3 {
   background-color: #2980b9;
   color: white !important;
 }
+
+.btn-eliminar {
+  display: inline-block;
+  padding: 4px 10px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 0.9rem;
+}
+
+.btn-eliminar:hover {
+  background-color: #0056b3;
+}
