--- a/views/includes/headerSecretaria.pug
+++ b/views/includes/headerSecretaria.pug
@@ -8,5 +8,5 @@ header
           li: a(href="/secretaria/listarEspera") Lista de espera
           li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="/agendas/crear") Crear Agenda
-          li: a(href="/agendas/ausencias/form") Cargar Ausencia
+          li: a(href="/agendas/ausencias/form") Cargar/Borrar Ausencia
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
