--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -61,6 +61,7 @@ html
                 th Hasta
                 th Horario
                 th Tipo
+                th
         tbody
             each a in ausencias
                 tr
@@ -74,6 +75,8 @@ html
                         else
                             | #{a.hora_inicio} - #{a.hora_fin}
                     td #{a.tipo}
+                    td
+                        button.btn-eliminar(type="button" data-id=a.id) Eliminar
 
 script(src="/js/ausencias.js")
 script(src="https://cdn.jsdelivr.net/npm/flatpickr")
