borrar lista de espera(no funciona)

--- a/views/secretaria/secretariaListaEspera.pug
+++ b/views/secretaria/secretariaListaEspera.pug
@@ -21,6 +21,7 @@ html
               th Fecha de Registro
               th Médico
               th Especialidad
+              th
           tbody
             each item in lista
               tr
@@ -29,11 +30,14 @@ html
                 td= new Date(item.fecha_registro).toLocaleDateString('es-AR')
                 td= item.nombre_medico
                 td= item.especialidad
+                td
+                      button.btn-eliminar(type="button" data-id=item.id) Eliminar
       else
         p No hay pacientes en lista de espera.
 
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/tablafecha.js")
+    script(src="/js/esperas.js")
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
     script(src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js")
