--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -52,7 +52,7 @@ html
                     p Foto no disponible
                 td= turno.estado
                 td
-                  a(class="btn-editar") Editar
+                  a(href=`/turnos/editarTurno/${turno.id}` class="btn-editar") Editar
                 td
                   a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
             else
