comienzo del traslado de turno
próximamente haremos que un paciente pueda pasar su turno a otro medico y otro horario que tenga

--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -34,6 +34,7 @@ html
               th Estado
               th Acciones
               th Acciones
+              th Acciones
           tbody
             each turno in turnos
               tr
@@ -55,6 +56,8 @@ html
                   a(href=`/turnos/editarTurno/${turno.id}` class="btn-editar") Editar
                 td
                   a(href=`/turnos/detalles/${turno.id}` class="btn-editar") Detalles
+                td
+                  a(href=`/turnos/trasladar/${turno.id}` class="btn-trasladar") Trasladar turno
             else
               p No hay turnos disponibles
     include ../includes/footer
